# bigi

./: .gitignore  Cargo.toml  Dockerfile  README.md
.sqlx/: query-0199351776b1fe8491f5bbd8dfcc78238ed2e4324d847d6bc3bf7c422497ce73.json  query-1dad52f785b60c685d436945b6a442e27aa4179735d465ef6652cf696c8ef347.json  query-2d85b99992259687f62d712f4e57234134f3edc9dca4b7fcfb30b69cc428bce7.json  query-41d3aba07397351b2d2a15bc352c32de7d9b254eb9b6c1fcca073a2db4c13aa0.json  query-5a99331609b3176c84cc8803b4859edc15613ee53d5a9d132910162ea2ee7a90.json  query-5ff7b78c79822eddf5646c9914075d54bacc5d37b6300131f23aa638a53af19a.json  query-6ae7022f12151fddf96c2b002593f6dd6eb23fcb28c77ebae0db32ce851840df.json  query-84a6e2cde90647818e5bc5adc45e6d732046c93b99bce40a962de3bab9faa520.json  query-a941e5f1b192743c01c48b7f841b39e077f458a1cf525d85eb57503aa1df86de.json  query-a9a542b5b45e0e33f801b5f80f185814acde66c735e77d6d046da8eb09aa0852.json  query-e543bf6d6e9d87d396579cbb5d546015d3d5156c5749cfef59294861031f46ab.json  query-f33701ed15be809504da6ff96d3cd2d4b1568f8440a5c1b6ed1e4962242dc047.json
src/: main.rs
src/db/: db.rs
src/proxy/: proxy.rs
