[package]
name = "sub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = { version = "0.17.0-beta.1" }
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = [ "runtime-async-std", "tls-native-tls" ,"sqlite" ] }
tide-sqlx = {version = "0.6.1" , features = ["native-tls"]}
sqlx-conditional-queries = {version = "0.1.3" , features = ["sqlite"]}
celes = "2.4.0"
base64 = "0.21.7"
emojic = "0.4"

[[bin]]
name = "boddo-sub"
path = "src/main.rs"
